-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
4.8.4, 5.0.1
-
None
Flickable does not update it's dragging and moving properties until after it has moved the content item the first time. This can make it difficult to detect whether a change in the content item position was due to user interaction or something else.
In the example below, ideally the debug output would print true for both properties on all changes while dragging but instead the first message prints false for both and corrects itself from then on.
import QtQuick 2.0 Flickable { width: 300 height: 300 contentHeight: 320 onContentYChanged: console.log("content y changed", moving, dragging) Rectangle { anchors.fill: parent anchors.margins: 10 color: "blue" } }
For Gerrit Dashboard: QTBUG-30032 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
49768,1 | Improve the ordering of Flickable dragging and moving property updates. | stable | qt/qtdeclarative | Status: MERGED | +2 | 0 |
50654,1 | Fix jump and property changes on first move when dragging a Flickable. | stable | qt/qtdeclarative | Status: MERGED | +2 | 0 |